# oxproc

./: AGENTS.md  Cargo.toml  LICENSE  README.md  plan.md
src/: color.rs  config.rs  daemon.rs  dirs.rs  list.rs  main.rs  manager.rs  state.rs  task.rs
