[package]
name = "oxproc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.12"
anyhow = "1.0.86"
thiserror = "1.0.61"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
