[package]
name = "oxproc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.12"
anyhow = "1.0.86"
thiserror = "1.0.61"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
daemonize = "0.5.0"
nix = { version = "0.29.0", default-features = false, features = ["process", "signal"] }
blake3 = "1.5.1"
fs2 = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
bytecount = "0.6.8"

[dev-dependencies]
tempfile = "3.10.1"
